--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
           </b>
         </p>
         <div class="buttons-block">
-          <a href="https://go-for-date.com/tds/ae?tdsId=s2355ste_r&tds_campaign=s2355ste&utm_sub=opnfnl&s1=ps&utm_source=int&clickid={clickid}&subid={subid}&subid2={subid2}&affid=dc1e761f
-" class="step-btn submit-btn tr-submit-button showmail">
+          <a href="https://securedsmcd.com/smartlink/?a=196808&sm=33369&co=249849&mt=26" class="step-btn submit-btn tr-submit-button showmail">
             ENTRAR                              
           </a>
         </div>
